--- a/index.html
+++ b/index.html
@@ -69,30 +69,30 @@
                     Already have an account? <a href="#" id="show-login" class="font-medium text-blue-600 hover:text-blue-500">Login here</a>
                 </p>
             </div>
-             <div id="message-area" class="text-center mt-4 text-red-600"></div>
+             <div id="message-area" class="text-center mt-4 text-red-600 font-medium"></div>
         </main>
     </div>
 
     <script type="module">
+        // Import only the functions we need from the Firebase SDKs
         import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
-        import { getFirestore, collection, query, where, onSnapshot, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
 
-        // IMPORTANT: Replace with your project's Firebase configuration
+        // Your specific Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyD-hl1Z4xs0QBi6TRbEqCEPzymF-Hp_5VY",
             authDomain: "uptime-monitor-2025.firebaseapp.com",
             projectId: "uptime-monitor-2025",
-            storageBucket: "uptime-monitor-2025.firebasestorage.app",
+            storageBucket: "uptime-monitor-2025.appspot.com",
             messagingSenderId: "1028391210140",
             appId: "1:1028391210140:web:6a18db0329c760e007f159",
             measurementId: "G-F4PE1SG04W"
         };
+
+        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
-        const db = getFirestore(app);
-        const analytics = getAnalytics(app);
-
+        
         // Redirect if user is already logged in
         onAuthStateChanged(auth, user => {
             if (user) {
@@ -140,14 +140,16 @@
 
         showRegisterLink.addEventListener('click', (e) => {
             e.preventDefault();
-            loginContainer.classList.add('hidden-form');
-            registerContainer.classList.remove('hidden-form');
+            messageArea.textContent = '';
+            loginContainer.style.display = 'none';
+            registerContainer.style.display = 'block';
         });
 
         showLoginLink.addEventListener('click', (e) => {
             e.preventDefault();
-            registerContainer.classList.add('hidden-form');
-            loginContainer.classList.remove('hidden-form');
+            messageArea.textContent = '';
+            registerContainer.style.display = 'none';
+            loginContainer.style.display = 'block';
         });
     </script>
 </body>
