--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         </header>
 
         <main class="card rounded-2xl shadow-2xl p-8">
-            <!-- Login Form -->
             <div id="login-container" class="form-container">
                 <form id="login-form">
                     <h2 class="text-2xl font-semibold text-gray-700 mb-6 text-center">Login</h2>
@@ -47,7 +46,6 @@
                 </p>
             </div>
 
-            <!-- Register Form -->
             <div id="register-container" class="hidden-form">
                 <form id="register-form">
                     <h2 class="text-2xl font-semibold text-gray-700 mb-6 text-center">Create Account</h2>
@@ -136,7 +134,7 @@
         const showRegisterLink = document.getElementById('show-register');
         const showLoginLink = document.getElementById('show-login');
         const loginContainer = document.getElementById('login-container');
-        const registerContainer = document.getElementById('register-container');
+        const registerContainer = agetElementById('register-container');
 
         showRegisterLink.addEventListener('click', (e) => {
             e.preventDefault();
