--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         const showRegisterLink = document.getElementById('show-register');
         const showLoginLink = document.getElementById('show-login');
         const loginContainer = document.getElementById('login-container');
-        const registerContainer = agetElementById('register-container');
+        const registerContainer = document.getElementById('register-container');
 
         showRegisterLink.addEventListener('click', (e) => {
             e.preventDefault();
