--- a/dashboard.html
+++ b/dashboard.html
@@ -8,85 +8,83 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; }
         .status-up { color: #16a34a; }
         .status-down { color: #dc2626; }
         .status-pending { color: #f59e0b; }
         .modal {
-            display: none; /* Hidden by default */
-            position: fixed; z-index: 100; left: 0; top: 0;
+            display: none; position: fixed; z-index: 100; left: 0; top: 0;
             width: 100%; height: 100%;
             overflow: auto; background-color: rgba(0,0,0,0.5);
-            backdrop-filter: blur(5px);
         }
         .modal-content {
             background-color: #fefefe; margin: 10% auto; padding: 24px;
             border: 1px solid #888; width: 80%; max-width: 600px;
-            border-radius: 1rem;
+            border-radius: 0.5rem;
         }
     </style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-100">
 
-    <nav class="bg-white shadow-sm">
+    <nav class="bg-white border-b border-gray-200">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <i class="fas fa-satellite-dish text-2xl text-blue-500"></i>
+                    <i class="fas fa-satellite-dish text-2xl text-gray-700"></i>
                     <span class="font-bold text-xl ml-2 text-gray-800">Uptime Monitor</span>
                 </div>
                 <div class="flex items-center">
                     <span id="user-email" class="text-sm text-gray-600 mr-4"></span>
-                    <button id="logout-button" class="text-sm text-gray-600 hover:text-blue-500">Logout</button>
+                    <button id="logout-button" class="text-sm text-gray-700 hover:text-gray-900">Logout</button>
                 </div>
             </div>
         </div>
     </nav>
 
     <main class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
-        <div class="bg-white p-6 rounded-lg shadow mb-6">
-             <h2 class="text-2xl font-semibold text-gray-700 mb-4">Add a New Monitor</h2>
-             <form id="add-monitor-form" class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
+        <div class="bg-white p-6 rounded-lg border border-gray-200 mb-6">
+             <h2 class="text-xl font-semibold text-gray-800 mb-4">Add New Monitor</h2>
+             <form id="add-monitor-form" class="grid grid-cols-1 md:grid-cols-4 gap-4 items-end">
                 <div class="md:col-span-2">
                     <label for="website-url" class="block text-sm font-medium text-gray-700">Website URL</label>
-                    <input type="url" id="website-url" placeholder="https://your-website.com" required class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm">
+                    <input type="url" id="website-url" placeholder="https://your-website.com" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
                 </div>
                 <div>
                     <label for="keyword" class="block text-sm font-medium text-gray-700">Keyword (Optional)</label>
-                    <input type="text" id="keyword" placeholder="e.g. 'Welcome'" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm">
+                    <input type="text" id="keyword" placeholder="e.g. 'Welcome'" class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
                 </div>
-                <div class="md:col-span-3 text-right">
-                    <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg shadow h-10"><i class="fas fa-plus mr-2"></i>Add Monitor</button>
+                <div class="text-right">
+                    <button type="submit" class="bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg h-10"><i class="fas fa-plus mr-2"></i>Add</button>
                 </div>
              </form>
              <div id="form-message-area" class="mt-3 text-red-600"></div>
         </div>
 
-        <div id="monitors-container" class="bg-white p-6 rounded-lg shadow">
+        <div id="monitors-container">
             <div class="flex justify-between items-center mb-4">
-                 <h1 class="text-2xl font-bold text-gray-900">Your Monitored Sites</h1>
+                 <h1 class="text-2xl font-bold text-gray-900">Monitors</h1>
             </div>
             <div id="loading-state" class="text-center py-8">
                 <i class="fas fa-spinner fa-spin text-3xl text-gray-400"></i>
-                <p class="mt-2 text-gray-600">Loading your monitors...</p>
+                <p class="mt-2 text-gray-600">Loading monitors...</p>
             </div>
-            <div id="empty-state" class="hidden text-center py-8">
+            <div id="empty-state" class="hidden text-center py-8 bg-white border border-gray-200 rounded-lg">
                  <i class="fas fa-eye-slash text-4xl text-gray-400 mb-4"></i>
-                 <h3 class="text-xl font-semibold text-gray-700">No monitors yet.</h3>
-                 <p class="text-gray-500">Use the form above to add your first site.</p>
+                 <h3 class="text-xl font-semibold text-gray-700">No monitors yet</h3>
+                 <p class="text-gray-500">Add your first site to begin monitoring.</p>
             </div>
             <div id="monitors-list" class="space-y-4"></div>
         </div>
     </main>
 
     <div id="history-modal" class="modal">
-        <div class="modal-content shadow-2xl">
-            <div class="flex justify-between items-center mb-4">
-                <h2 class="text-2xl font-bold text-gray-800">Uptime History</h2>
-                <button id="close-modal-button" class="text-2xl font-bold hover:text-red-500">&times;</button>
+        <div class="modal-content shadow-lg">
+            <div class="flex justify-between items-center mb-4 pb-4 border-b">
+                <h2 class="text-xl font-bold text-gray-800">Uptime History</h2>
+                <button id="close-modal-button" class="text-2xl font-bold text-gray-600 hover:text-red-500">&times;</button>
             </div>
             <div id="history-content" class="max-h-96 overflow-y-auto">
-                </div>
+            </div>
         </div>
     </div>
 
@@ -154,7 +152,7 @@
             try {
                 await addDoc(collection(db, "monitors"), {
                     url: url,
-                    keyword: keyword || null, // Store keyword or null
+                    keyword: keyword || null,
                     userId: currentUser.uid,
                     status: "PENDING",
                     createdAt: serverTimestamp(),
@@ -200,15 +198,15 @@
             const keywordText = monitor.keyword ? `<p class="text-xs text-gray-500 italic">Keyword: "${monitor.keyword}"</p>` : '';
 
             return `
-                <div class="border border-gray-200 rounded-lg p-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4">
+                <div class="bg-white border border-gray-200 rounded-lg p-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4">
                     <div class="flex-grow">
-                        <p class="font-bold text-lg text-gray-800 break-all">${monitor.url}</p>
+                        <p class="font-semibold text-lg text-gray-800 break-all">${monitor.url}</p>
                         ${keywordText}
-                        <p class="text-sm text-gray-500 mt-1">Last Checked: ${lastChecked}</p>
+                        <p class="text-sm text-gray-500 mt-1">Last check: ${lastChecked}</p>
                     </div>
                     <div class="flex items-center gap-4 w-full sm:w-auto">
                          <div class="text-left sm:text-right">
-                            <p class="font-semibold text-lg ${statusClass}"><i class="fas ${statusIcon} mr-2"></i>${statusText}</p>
+                            <p class="font-medium text-md ${statusClass}"><i class="fas ${statusIcon} mr-2"></i>${statusText}</p>
                             <p class="text-xs text-gray-400">Response: ${responseTime}</p>
                         </div>
                         <button data-id="${id}" class="view-history-button bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-2 px-3 rounded-lg text-sm">History</button>
@@ -221,7 +219,7 @@
         monitorsListContainer.addEventListener('click', async (e) => {
             if (e.target.classList.contains('view-history-button')) {
                 const monitorId = e.target.dataset.id;
-                historyContent.innerHTML = '<p class="text-center">Loading history...</p>';
+                historyContent.innerHTML = '<p class="text-center text-gray-500">Loading history...</p>';
                 historyModal.style.display = 'block';
 
                 const logsQuery = query(collection(db, `monitors/${monitorId}/logs`), orderBy('timestamp', 'desc'), limit(30));
