--- a/index.html
+++ b/index.html
@@ -8,63 +8,62 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <style>
-        body { font-family: 'Inter', sans-serif; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); }
-        .card { backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); background-color: rgba(255, 255, 255, 0.7); border: 1px solid rgba(255, 255, 255, 0.3); }
+        body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; }
         .form-container { display: block; }
         .hidden-form { display: none; }
     </style>
 </head>
 <body class="min-h-screen flex flex-col items-center justify-center p-4">
 
-    <div class="w-full max-w-md mx-auto">
+    <div class="w-full max-w-sm mx-auto">
         <header class="text-center mb-8">
-            <i class="fas fa-satellite-dish text-5xl text-blue-500 mb-4"></i>
-            <h1 class="text-4xl font-bold text-gray-800">Uptime Monitor</h1>
-            <p class="text-gray-600 mt-2">Login or create an account to start monitoring.</p>
+            <i class="fas fa-satellite-dish text-5xl text-gray-700 mb-4"></i>
+            <h1 class="text-3xl font-bold text-gray-800">Uptime Monitor</h1>
+            <p class="text-gray-500 mt-2">Welcome back. Please sign in to continue.</p>
         </header>
 
-        <main class="card rounded-2xl shadow-2xl p-8">
+        <main class="bg-white rounded-lg shadow-md p-8">
             <div id="login-container" class="form-container">
                 <form id="login-form">
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-6 text-center">Login</h2>
+                    <h2 class="text-xl font-semibold text-gray-700 mb-6 text-center">Sign In</h2>
                     <div class="space-y-4">
                         <div>
-                            <label for="login-email" class="block text-sm font-medium text-gray-700">Email</label>
-                            <input type="email" id="login-email" required class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm">
+                            <label for="login-email" class="block text-sm font-medium text-gray-600">Email</label>
+                            <input type="email" id="login-email" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
                         </div>
                         <div>
-                            <label for="login-password" class="block text-sm font-medium text-gray-700">Password</label>
-                            <input type="password" id="login-password" required class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm">
+                            <label for="login-password" class="block text-sm font-medium text-gray-600">Password</label>
+                            <input type="password" id="login-password" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
                         </div>
                     </div>
                     <div class="mt-6">
-                        <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg">Login</button>
+                        <button type="submit" class="w-full bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg">Sign In</button>
                     </div>
                 </form>
                 <p class="text-center text-sm text-gray-600 mt-4">
-                    No account? <a href="#" id="show-register" class="font-medium text-blue-600 hover:text-blue-500">Register here</a>
+                    No account? <a href="#" id="show-register" class="font-medium text-gray-700 hover:text-gray-500">Register</a>
                 </p>
             </div>
 
             <div id="register-container" class="hidden-form">
                 <form id="register-form">
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-6 text-center">Create Account</h2>
+                    <h2 class="text-xl font-semibold text-gray-700 mb-6 text-center">Create Account</h2>
                     <div class="space-y-4">
                         <div>
-                            <label for="register-email" class="block text-sm font-medium text-gray-700">Email</label>
-                            <input type="email" id="register-email" required class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm">
+                            <label for="register-email" class="block text-sm font-medium text-gray-600">Email</label>
+                            <input type="email" id="register-email" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
                         </div>
                         <div>
-                            <label for="register-password" class="block text-sm font-medium text-gray-700">Password</label>
-                            <input type="password" id="register-password" required class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm">
+                            <label for="register-password" class="block text-sm font-medium text-gray-600">Password</label>
+                            <input type="password" id="register-password" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
                         </div>
                     </div>
                     <div class="mt-6">
-                        <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg">Register</button>
+                        <button type="submit" class="w-full bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg">Register</button>
                     </div>
                 </form>
                 <p class="text-center text-sm text-gray-600 mt-4">
-                    Already have an account? <a href="#" id="show-login" class="font-medium text-blue-600 hover:text-blue-500">Login here</a>
+                    Already have an account? <a href="#" id="show-login" class="font-medium text-gray-700 hover:text-gray-500">Sign in</a>
                 </p>
             </div>
              <div id="message-area" class="text-center mt-4 text-red-600 font-medium"></div>
