--- a/index.html
+++ b/index.html
@@ -3,151 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uptime Monitor - 24/7 Website Monitoring</title>
+    <title>Uptime Monitor - 24/7 Website Monitoring Service</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <style>
-        body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; }
-        .form-container { display: block; }
-        .hidden-form { display: none; }
+        body { font-family: 'Inter', sans-serif; }
+        .gradient-bg { background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); }
+        .feature-card { transition: transform 0.3s ease, box-shadow 0.3s ease; }
+        .feature-card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
     </style>
 </head>
-<body class="min-h-screen flex flex-col items-center justify-center p-4">
+<body class="bg-gray-50 text-gray-800">
 
-    <div class="w-full max-w-sm mx-auto">
-        <header class="text-center mb-8">
-            <i class="fas fa-satellite-dish text-5xl text-gray-700 mb-4"></i>
-            <h1 class="text-3xl font-bold text-gray-800">Uptime Monitor</h1>
-            <p class="text-gray-500 mt-2">Welcome back. Please sign in to continue.</p>
-        </header>
-
-        <main class="bg-white rounded-lg shadow-md p-8">
-            <div id="login-container" class="form-container">
-                <form id="login-form">
-                    <h2 class="text-xl font-semibold text-gray-700 mb-6 text-center">Sign In</h2>
-                    <div class="space-y-4">
-                        <div>
-                            <label for="login-email" class="block text-sm font-medium text-gray-600">Email</label>
-                            <input type="email" id="login-email" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
-                        </div>
-                        <div>
-                            <label for="login-password" class="block text-sm font-medium text-gray-600">Password</label>
-                            <input type="password" id="login-password" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
-                        </div>
-                    </div>
-                    <div class="mt-6">
-                        <button type="submit" class="w-full bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg">Sign In</button>
-                    </div>
-                </form>
-                <p class="text-center text-sm text-gray-600 mt-4">
-                    No account? <a href="#" id="show-register" class="font-medium text-gray-700 hover:text-gray-500">Register</a>
-                </p>
+    <!-- Header -->
+    <header class="bg-white shadow-sm sticky top-0 z-50">
+        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="flex items-center">
+                <i class="fas fa-satellite-dish text-2xl text-gray-800"></i>
+                <span class="font-bold text-xl ml-2 text-gray-900">Uptime Monitor</span>
             </div>
-
-            <div id="register-container" class="hidden-form">
-                <form id="register-form">
-                    <h2 class="text-xl font-semibold text-gray-700 mb-6 text-center">Create Account</h2>
-                    <div class="space-y-4">
-                        <div>
-                            <label for="register-email" class="block text-sm font-medium text-gray-600">Email</label>
-                            <input type="email" id="register-email" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
-                        </div>
-                        <div>
-                            <label for="register-password" class="block text-sm font-medium text-gray-600">Password</label>
-                            <input type="password" id="register-password" required class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-gray-500 focus:border-gray-500">
-                        </div>
-                    </div>
-                    <div class="mt-6">
-                        <button type="submit" class="w-full bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg">Register</button>
-                    </div>
-                </form>
-                <p class="text-center text-sm text-gray-600 mt-4">
-                    Already have an account? <a href="#" id="show-login" class="font-medium text-gray-700 hover:text-gray-500">Sign in</a>
-                </p>
+            <div>
+                <a href="/login.html" class="bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-5 rounded-lg transition duration-300">
+                    Sign In
+                </a>
             </div>
-             <div id="message-area" class="text-center mt-4 text-red-600 font-medium"></div>
-        </main>
-    </div>
+        </nav>
+    </header>
 
-    <script type="module">
-        // Import only the functions we need from the Firebase SDKs
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
+    <!-- Hero Section -->
+    <main>
+        <section class="gradient-bg py-20 sm:py-32">
+            <div class="container mx-auto px-6 text-center">
+                <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 leading-tight">
+                    Reliable Website Monitoring.
+                </h1>
+                <p class="mt-4 text-lg md:text-xl text-gray-600 max-w-3xl mx-auto">
+                    Never miss a beat. Get instant alerts when your website goes down and gain insights into its performance. Simple, powerful, and free.
+                </p>
+                <a href="/login.html" class="mt-8 inline-block bg-gray-800 hover:bg-gray-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300 shadow-lg">
+                    Start Monitoring for Free
+                </a>
+            </div>
+        </section>
 
-        // Your specific Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyD-hl1Z4xs0QBi6TRbEqCEPzymF-Hp_5VY",
-            authDomain: "uptime-monitor-2025.firebaseapp.com",
-            projectId: "uptime-monitor-2025",
-            storageBucket: "uptime-monitor-2025.appspot.com",
-            messagingSenderId: "1028391210140",
-            appId: "1:1028391210140:web:6a18db0329c760e007f159",
-            measurementId: "G-F4PE1SG04W"
-        };
+        <!-- Features Section -->
+        <section class="py-20 bg-white">
+            <div class="container mx-auto px-6">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Why Choose Uptime Monitor?</h2>
+                    <p class="text-gray-600 mt-2">Everything you need to keep your online presence secure.</p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Feature 1 -->
+                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                            <i class="fas fa-tachometer-alt text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Constant Monitoring</h3>
+                        <p class="text-gray-600">We check your website every 5 minutes from multiple locations to ensure it's always online and accessible to your users.</p>
+                    </div>
+                    <!-- Feature 2 -->
+                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                            <i class="fas fa-bell text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Instant Alerts</h3>
+                        <p class="text-gray-600">Receive immediate email notifications the moment your site goes down, so you can take action before it affects your business.</p>
+                    </div>
+                    <!-- Feature 3 -->
+                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                            <i class="fas fa-search-plus text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Keyword Verification</h3>
+                        <p class="text-gray-600">Go beyond simple pings. We can check for a specific keyword on your page to ensure your content is loading correctly.</p>
+                    </div>
+                     <!-- Feature 4 -->
+                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                            <i class="fas fa-chart-line text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Performance Insights</h3>
+                        <p class="text-gray-600">Track your site's response time and review historical uptime data with beautiful charts to understand its performance over time.</p>
+                    </div>
+                     <!-- Feature 5 -->
+                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                            <i class="fas fa-mobile-alt text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Mobile-First Design</h3>
+                        <p class="text-gray-600">Access your dashboard and manage your monitors from any device, anywhere, with our fully responsive interface.</p>
+                    </div>
+                     <!-- Feature 6 -->
+                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                            <i class="fas fa-lock text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Secure & Private</h3>
+                        <p class="text-gray-600">Your data is yours. We use secure authentication and respect your privacy. We only monitor what you tell us to.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        
-        // Redirect if user is already logged in
-        onAuthStateChanged(auth, user => {
-            if (user) {
-                window.location.href = '/dashboard.html';
-            }
-        });
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-white">
+        <div class="container mx-auto px-6 py-8 text-center">
+            <p>&copy; 2025 Uptime Monitor. All rights reserved.</p>
+            <p class="text-sm text-gray-400 mt-2">A reliable service to keep you online.</p>
+        </div>
+    </footer>
 
-        const loginForm = document.getElementById('login-form');
-        const registerForm = document.getElementById('register-form');
-        const messageArea = document.getElementById('message-area');
-
-        // Login logic
-        loginForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const email = loginForm['login-email'].value;
-            const password = loginForm['login-password'].value;
-            signInWithEmailAndPassword(auth, email, password)
-                .then(cred => {
-                    window.location.href = '/dashboard.html';
-                })
-                .catch(err => {
-                    messageArea.textContent = err.message;
-                });
-        });
-
-        // Register logic
-        registerForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const email = registerForm['register-email'].value;
-            const password = registerForm['register-password'].value;
-            createUserWithEmailAndPassword(auth, email, password)
-                .then(cred => {
-                    window.location.href = '/dashboard.html';
-                })
-                .catch(err => {
-                    messageArea.textContent = err.message;
-                });
-        });
-
-        // Toggle between forms
-        const showRegisterLink = document.getElementById('show-register');
-        const showLoginLink = document.getElementById('show-login');
-        const loginContainer = document.getElementById('login-container');
-        const registerContainer = document.getElementById('register-container');
-
-        showRegisterLink.addEventListener('click', (e) => {
-            e.preventDefault();
-            messageArea.textContent = '';
-            loginContainer.style.display = 'none';
-            registerContainer.style.display = 'block';
-        });
-
-        showLoginLink.addEventListener('click', (e) => {
-            e.preventDefault();
-            messageArea.textContent = '';
-            registerContainer.style.display = 'none';
-            loginContainer.style.display = 'block';
-        });
-    </script>
 </body>
 </html>
